--- a/style.css
+++ b/style.css
@@ -1,19 +1,61 @@
 body{
     text-align: center;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    min-height: 100vh;
+    background-color: #424769;
 }
 
 img{
-    height: 100px;
-    width: 100px;
+    height: 300px;
+    width: 300px;
+    border-radius: 16px;
+    border: 4px solid #FAEF5D;
+    padding-top: 0;
+}
+
+.header{
+    background-color: #2D3250;
+    margin: 0;
+    padding: 0;
+}
+
+.header h1{
+    color: #F6B17A;
+    font-size: 48px;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    
+}
+
+.main{
+    background-color: #424769;
+    margin:0;
+    padding: 0;
+    border: 1px solid #424769;
 }
 
 button{
+    font-size: 36px;
+    color: red;
+    font-weight: 900;
     height:200px;
     width: 200px;
+    margin: 15px;
+    border-radius: 16px;
+    border: 4px solid #FAEF5D;
+    margin-top: 0;
 }
 
 h2{
    margin-bottom: -10px;
+   padding: 0;
+   color: #FAEF5D;
+}
+
+h3{
+    color: #FAEF5D;
 }
 .selectedBox{
     display:flex;
@@ -21,3 +63,17 @@ h2{
     gap: 24px;
 }
 
+.footer{
+    background-color: #7077A1;
+    margin-top: auto;
+    padding:1%;
+    display: flex;
+    justify-content: center;
+    color:white
+}
+
+.selectedBox p{
+    font-size: 32px;
+    font-weight: 900;
+    color: #FAEF5D;
+}
